# compter-buches-bois

./: .gitignore  README.md  app.py  hello.py  logs.yaml  pyproject.toml  sam2_test.py
data_logs/: classes.txt  labels.cache  notes.json
data_logs/labels/: buches.txt
legacy/: compter_buches_bois.py  sam3_demo.py  sam3_minimal.py  segment_all_buches_watershed_sam2.py
