[project]
name = "compter-buches-bois"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.0.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow<11.0",
    "sam-2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/segment-anything-2.git" }
